# otus-hightload

./: .gitignore  OTUS_highload.postman_collection.json  compose.yaml  readme.md
.docker/: docker-compose.yaml
.docker/db/: Dockerfile  startup.sh  startup.sql
.docker/dbreplica1/: Dockerfile  startup.sh
.docker/dbreplica2/: startup.sh
.docker/rabbitmq/: Dockerfile
.docker/tarantool/: Dockerfile  app.lua  config.yaml  init.lua
.kube/: configmap.yaml  deploy-backend.yaml  deploy-master.yaml  deploy-replica.yaml  deploy-replica1.yaml  secret.yaml
.patroni/: docker-compose-citus.yml  docker-compose.yml  postgres0.yml  postgres1.yml  postgres2.yml  postgres3.yml  postgres4.yml  postgres5.yml
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs
backend/migrations/: 0001_create-friends_up.sql  0001_create-index-users-f_name_s_name_idx_down.sql  0001_create-index-users-f_name_s_name_idx_up.sql  0001_create-sessions_up.sql  0001_create-users_up.sql  0001_create_index-friends-friend_id_down.sql  0001_create_index-friends-friend_id_up.sql  0001_create_index-users-id_idx_down.sql  0001_create_index-users-id_idx_up.sql  0001_create_index-users_names_gin_tsvector_up.sql  0001_create_posts_up.sql
backend/proto/: user.proto
backend/src/: friend.rs  friend_storage.rs  main.rs  post.rs  postgres.rs  postgres_friend_storage.rs  postgres_session_storage.rs  rabbitmq.rs  redis.rs  session.rs  session_storage.rs  tarantool.rs  tarantool_friend_storage.rs  tarantool_session_storage.rs  user.rs  user_search.rs  websocket.rs
diagrams/: Messages Diagram.drawio
dialogs/: Cargo.toml  Dockerfile  docker-compose-citus.yaml  docker-compose-patroni.yaml  docker-compose.yaml
dialogs/migrations/: 0001_create_dialog-messages_down.sql  0001_create_dialog-messages_up.sql  0001_create_dialogs_up.sql  0001_create_extension_citus_down.sql  0001_create_extension_citus_up.sql
dialogs/proxy/: Dockerfile
dialogs/src/: dialog.rs  main.rs  postgres.rs
report/: report.md
report/lesson_10/: README.md
report/lesson_14/: README.md
report/lesson_15/: README.md
report/lesson_16/: README.md
report/lesson_23/: README.md
report/lesson_27/: README.md
report/lesson_29/: README.md
report/lesson_9/: Graph Results.jmx  README.md
unread/: cert.pem  docker-compose.yaml  key.pem
unread/migrations/: 0001_create_dialog-messages_up.sql  0001_create_distributed_table_dialog_messages_up.sql
unread/proxy/: nginx.conf  server.crt  server.csr  server.key
unread/src/: dialog.rs  main.rs  postgres.rs
