[package]
name = "rust-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
deadpool-postgres = "0.9.0"
env_logger = "^0.8"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1","with-uuid-1"] }
tokio-postgres-migration = "^0.1"
futures = "0.3"
unicode-segmentation = "1.11.0"
argon2 = "0.5.3"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
]
