[package]
name = "rust-postgres"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
deadpool = { version = "0.6.0" }
deadpool-postgres = { version = "0.9.0", features = ["rt_tokio_1","rt_async-std_1","serde"] }
env_logger = "^0.8"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1","with-uuid-1","with-chrono-0_4"] }
tokio-postgres-migration = "^0.1"
futures = "0.3"
unicode-segmentation = "1.11.0"
argon2 = "0.5.3"
chrono = { version = "0.4.35", features = ["serde"] }
tonic = { version = "0.11.0", features = ["tls", "gzip"] }
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.15"
openssl = { version = "0.10" }
actix-web-httpauth = "0.8.1"
redis = "0.25.3"
deadpool-redis = "0.15.1"
amqprs = "1.6.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
tokio-tungstenite = "*"
futures-channel = "0.3.30"
futures-util = "0.3.30"
rusty_tarantool = "0.3.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
]

[build-dependencies]
tonic-build = "0.11.0"
