[package]
name = "dialogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4", features = ["openssl"] }
actix-web-httpauth = "^0.8"
openssl = { version = "^0.10" }
deadpool = { version = "^0.6" }
deadpool-postgres = { version = "^0.9", features = ["rt_tokio_1","rt_async-std_1","serde"] }
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "^1.36", features = ["macros", "sync", "rt-multi-thread"] }
tokio-postgres = { version = "^0.7", features = ["with-serde_json-1","with-uuid-1","with-chrono-0_4"] }
tokio-postgres-migration = "^0.1"
tokio-stream = "^0.1"
futures = "^0.3"
uuid = { version = "^1.7", features = ["v4", "fast-rng", "serde"] }
log = "^0.4"
env_logger = "^0.11"
